--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Ann.design</a></h1>
+						<h1><a href="index.html">Spectral</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,8 +27,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Projects</a></li>
-											<li><a href="elements.html">Critique</a></li>
+											<li><a href="generic.html">Generic</a></li>
+											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
@@ -55,9 +55,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>DATA VISUALISATION  <br />
+								<h2>Welcome to my page <br />
 								</h2>
-								<p> . CRITIQUE . PRACTICE .</p>
+								<p> . DESIGNER . THINKER .</p>
 							</header>
 							
 						</div>
@@ -110,7 +110,7 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; ann.design</li><li>Design: <a href="http://html5up.net">annya pearl s</a></li>
+							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
