--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="/images/titletown.jpg" alt="" /></div><div class="content">
-								<h1>01</h1>
-
+								<h1 style="font-size:04vw">01</h1>
 								<h2>Winningest title towns !!<br />
 									
 								</h2>
@@ -79,7 +78,7 @@
 						
 						<section class="spotlight">
 							<div class="image"><img src="/images/MOVIE.jpg" alt="" /></div><div class="content">
-								<h1>02</h1>
+								<h1 style="font-size:04vw">02</h1>
 								<h2>Contraversy makes movies hit??<br />
 								</h2>
 								<p>Looking at how contraversy makes an impact on perception of the  movie and how it affect the profitability..</p>
