--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+					<section id="cta" class="wrapper style5">
 						<div class="inner">
 							<header>
 								<h2>THANK YOU </h2>
@@ -113,7 +113,8 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">Ann.design
+							</a></li>
 						</ul>
 					</footer>
 
