--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="/images/titletown.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="./images/titletown.jpg" alt="" /></div><div class="content">
 								<h1 style="font-size:04vw">01</h1>
 								<h2>Winningest title towns !!<br />
 									
@@ -77,7 +77,7 @@
 						</section>
 						
 						<section class="spotlight">
-							<div class="image"><img src="/images/MOVIE.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="./images/MOVIE.jpg" alt="" /></div><div class="content">
 								<h1 style="font-size:04vw">02</h1>
 								<h2>Contraversy makes movies hit??<br />
 								</h2>
