--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 						<div class="inner">
 							<h2>AnnYA  PEARL</h2>
 							<p>Welcome to ann's page<br />
-							have a look at my works and thoughts </a>.</p>
+							have a look at my works  </a>.</p>
 							<ul class="actions special">
 								<br />
-								<li><a href="./A" class="button sec">See more</a></li>
+								
 							</ul>
 						</div>
 						<a href="" class="more scrolly">Learn More</a>
